@@ -34,6 +34,7 @@ Application Fixes:
 - Added catch behaviour to validate that PDF output can correctly save a file to a given path.
 - Fixed issues with Fettered Sprites and Spirits not properly being able to be flagged when the Technoshaman is first purchased. 
 - Fixed inanimate vessel possession not properly assigning attribute values. 
+- Fixed a crash when selecting spells with both the Extended and Limited checkboxes.
 
 Data Changes:
 - Removed extraneous Magic Sense quality. Closes #4021
